--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 }
 
 .ant-modal-mask {
-  background-color:  rgba(0, 0, 0, 0.65);
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
 .ant-modal-content {
@@ -67,6 +67,13 @@
 }
 
 .rnc__notification-item--danger {
-  background-color: var(--sq-gray100);;
-  border-left: 8px solid var(--sq-error);;
+  background-color: var(--sq-gray100);
+  border-left: 8px solid var(--sq-error);
+}
+
+.errorFallback {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
